# sosstools

./: pyproject.toml  setup.py
sosstools/data/: background.py  dataset.py  search_soss_files.py
sosstools/pipeline/: pipeline.py
sosstools/plotting/: plotting.py
sosstools/spectroscopy/: extract_1d.py  signal_alignment.py  tracing.py
sosstools/spectroscopy/soss_extract/: atoca.py
