# [build-system]
# requires = ["setuptools", "setuptools-scm"]
# build-backend = "setuptools.build_meta"

# [project]
# name = "sosstools"
# version = "0.0.1"
# authors = [{ name = "Tyler Baines", email = "tbaines@stsci.edu" }]
# description = "Data analysis tools for SOSS"
# readme = "README.md"
# requires-python = ">=3.10"

# [tool.setuptools.packages.find]
# where = ["."]
# # include = ["data"]
# # exclude = ["scripts", "test"]
# namespaces = true
